# core

./: .gitignore  CONTRIBUTING.md  Cargo.toml  index.d.ts  package.json
.github/workflows/: CI.yml  Release.yml
.husky/: commit-msg  pre-commit
__test__/: cp.spec.ts  read_file.spec.ts
docs/app/: globals.css  layout.jsx
docs/content/: benchmarks.mdx
docs/content/api/: access.mdx  append-file.mdx  chmod.mdx  chown.mdx  copy-file.mdx  exists.mdx  glob.mdx  link.mdx  lstat.mdx  mkdir.mdx  mkdtemp.mdx  read-file.mdx  readdir.mdx  readlink.mdx  realpath.mdx  rename.mdx  rmdir.mdx  stat.mdx  symlink.mdx  truncate.mdx  unlink.mdx  utimes.mdx  write-file.mdx
scripts/: run-performance.mjs  sync-performance-docs.mjs  validate-branch-name.mjs  validate-commit-msg.mjs
src/: read_file.rs
test/conformance/_helpers/: normalize.ts
test/conformance/access/: access.spec.ts  sdd.md
test/conformance/appendFile/: appendFile.spec.ts  sdd.md
test/conformance/chmod/: chmod.spec.ts  sdd.md
test/conformance/chown/: chown.spec.ts  sdd.md
test/conformance/copyFile/: copyFile.spec.ts  sdd.md
test/conformance/cp/: cp.spec.ts  sdd.md
test/conformance/exists/: exists.spec.ts  sdd.md
test/conformance/glob/: glob.spec.ts  sdd.md
test/conformance/link/: link.spec.ts  sdd.md
test/conformance/lstat/: lstat.spec.ts  sdd.md
test/conformance/mkdir/: mkdir.spec.ts  sdd.md
test/conformance/mkdtemp/: sdd.md  (+1 more)
test/docs/: sync-performance-docs.spec.ts
test/fixtures/: fs-scale.ts
test/governance/: branch-name.spec.ts  commit-msg.spec.ts
test/performance/: measure.spec.ts
(+36 files in other folders)
